fix overflow when admin bar shown

--- a/style-override.scss
+++ b/style-override.scss
@@ -2,6 +2,10 @@
 Override Style
 */
 
+.admin-bar > .mdl-layout__container{
+  height: auto;
+}
+
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
